<resources>
    <string name="app_name" translatable="false">Weather App</string>
    <string name="map_api_key" translatable="false">AIzaSyDN37Ds-_OZtzTT4G2OMT0EvdQUntqsi3k</string>
    <string name="table_name" translatable="false">Favorites</string>
    <string name="column_id" translatable="false">id</string>
    <string name="column_lat" translatable="false">lat</string>
    <string name="column_lon" translatable="false">lon</string>
    <string name="alert_messade_add_location">Bu lokasyonu eklemek istediğinize emin misiniz?</string>
    <string name="button_negative">Hayır</string>
    <string name="button_positive">Evet</string>
    <string name="warning_play_services">Play Service\'ye bağlanılamıyor</string>
    <string name="permission_message">Uygulama hava durumunu göstermek için konumunuza ihtiyaç duyuyor</string>
    <string name="settings">Ayarlar</string>
    <string name="scheme" translatable="false">package</string>
    <string name="imageType" translatable="false">.png</string>
    <string name="alert_message_delete_location">Bu lokasyonu silmek istediğinize emin misiniz?</string>
    <string name="exit">Çıkış</string>
    <string name="contentDescriptionContent" translatable="false">icon</string>
    <string name="dummy_current_temp" translatable="false">14 C</string>
    <string name="dummy_current_loc">Kağıthane</string>
    <string name="dummy_humidity" translatable="false">100%</string>
    <string name="dummy_rain_possibility" translatable="false">20</string>
    <string name="dummy_wind_speed" translatable="false">4</string>
    <string name="place_input_hint">Görmek istediğiniz lokasyonu giriniz</string>
    <string name="dummy_item_title" translatable="false">Dufresne</string>
    <string name="column_date" translatable="false">date</string>
    <string name="rate_us_message">Uygulamamızı değerlendirmek ister misiniz?</string>
    <string name="send">Gönder</string>
    <string name="location_not_found">Girdiğiniz lokasyon bulunamadı</string>
</resources>
