<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aligkts.weatherapp.view.ui.WeatherDetailFragment">

    <TextView
        android:id="@+id/txtCurrentLocDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dummy_current_loc"
        android:textColor="@android:color/black"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgWeatherIconDetail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/contentDescriptionContent" />

        <TextView
            android:id="@+id/txtCurrentTempDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_current_temp"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_pressure"
            android:drawablePadding="10dp"
            android:text="@string/dummy_humidity"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtRainPossibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_rain_pos"
            android:drawablePadding="10dp"
            android:text="@string/dummy_rain_possibility"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtWindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_wind"
            android:drawablePadding="10dp"
            android:text="@string/dummy_wind_speed"
            android:textColor="@android:color/black" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_bookmark" />

</LinearLayout>

